[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Font/07558_CenturyGothic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Levels/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Levels/TransitionScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/menu/menu back.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_top = 2
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.831373, 0.0431373, 0.760784, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 961.0
margin_bottom = 641.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -56.0
margin_right = 59.0
margin_bottom = 56.0

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 118.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="Instructions" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 118.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
text = "CONTROLS"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 91.0
margin_right = 118.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 4 )
text = "CREDITS"

[node name="Thanks" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 118.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 4 )
text = "Thanks to..."

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 153.0
margin_right = 118.0
margin_bottom = 185.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 44.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "Music"
align = 1
valign = 1

[node name="Music" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 112.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )

[node name="TransitionScene" parent="." instance=ExtResource( 3 )]
offset = Vector2( 0, 700 )
transform = Transform2D( 1, 0, 0, 1, 0, 700 )

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Thanks" to="." method="_on_Thanks_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/Music" to="." method="_on_Music_toggled"]
